2016-11-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* lib/target-supports.exp (check_gc_sections_available): Use
	-print-prog-name=ld to determine linker used.

2016-11-02  Martin Liska  <mliska@suse.cz>

	* gcc.dg/tree-ssa/builtins-folding-gimple-ub.c (main): Add
	test case.

2016-11-02  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR tree-optimization/78170
	* gcc.c-torture/execute/pr78170.c: New test.

2016-11-02  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR tree-optimization/78162
	* gcc.c-torture/compile/pr78162.c: New test.

2016-11-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/78035
	PR tree-optimization/77964
	* gcc.target/i386/pr78035.c: New testcase.

2016-11-02  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/vrp111.c: New testcase.
	* gcc.dg/tree-ssa/pr20702.c: Disable EVRP.
	* gcc.dg/tree-ssa/pr21086.c: Likewise.
	* gcc.dg/tree-ssa/pr58480.c: Likewise.
	* gcc.dg/tree-ssa/vrp08.c: Likewise.

2016-11-01  David Edelsohn  <dje.gcc@gmail.com>

	* gfortran.dg/pr70937.f90: require-effective-target lto.

2016-11-01  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/69544
	* gfortran.dg/where_6.f90:  New test.

2016-11-01  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/debug/dwarf2/inline-var-1.C: New test.

2016-11-01  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/69544
	* gfortran.dg/where_5.f90:  New test.

2016-11-01  Bilyan Borisov  <bilyan.borisov@arm.com>

	* gcc.target/arm/simd/vmaxnm_f32_1.c: New.
	* gcc.target/arm/simd/vmaxnmq_f32_1.c: Likewise.
	* gcc.target/arm/simd/vminnm_f32_1.c: Likewise.
	* gcc.target/arm/simd/vminnmq_f32_1.c: Likewise.

2016-11-01  Uros Bizjak  <ubizjak@gmail.com>

	* lib/target-supports.exp: Normalize order of i?86 and x86_64 targets.
	Whitespace fixes.
	(check_effective_target_vect_cmdline_needed): Check
	is-effective-target ia32 for x86 targets.
	(check_effective_target_vect_simd_clones): Simplify condition.
	(check_effective_target_vect_double): Ditto.